[package]
edition = "2021"
name = "jepsen-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
default-struct-builder = "0.5.0"
# derive_builder = "0.20.1"
futures-util = "0.3.30"
j4rs = "0.20.0"
log = "0.4.22"
madsim = "0.2.27"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "0.2", package = "madsim-tokio" }
tokio-stream = "0.1.15"

[patch.crates-io]
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad" }

[build-dependencies]
j4rs = "0.20.0"

[dev-dependencies]
pretty_env_logger = "0.5.0"
