[package]
edition = "2021"
name = "jepsen-rs"
version = "0.1.0"
description = "A binding to jepsen and a jepsen test suit for rust deterministic simulation testing."
authors = ["DatenLord <dev@datenlord.io>"]
license = "MIT"
repository = "https://github.com/xline-kv/jepsen-rs"
categories = ["Test"]
keywords = ["Test", "Deterministic Simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-recursion = "1.1.1"
async-trait = "0.1.83"
default-struct-builder = "0.5.1"
futures-util = "0.3.31"
j4rs = "0.20.0"
log = "0.4.22"
madsim = "0.2.27"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
tap = "1.0.1"
tokio = { version = "0.2", package = "madsim-tokio" }
tokio-stream = "0.1.16"

# [patch.crates-io]
# tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad" }

[build-dependencies]
j4rs = "0.20.0"

[dev-dependencies]
pretty_env_logger = "0.5.0"
